# ps2-analysis

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg
examples/: cof_simulation.html  cof_simulation.py  discover.json  discover.py  discover_fire_groups.json  discover_fire_groups.py  discover_infantry_weapons.json  discover_infantry_weapons.py  discover_vehicle_weapons.json  discover_vehicle_weapons.py  fire_simulation_plot.py  generate_infantry_weapons.py  generate_shot_simulation.py  generate_vehicle_weapons.py  optimal_bursting.html  optimal_bursting.py  shooting_simulation.html  shooting_simulation.py  shooting_simulation_compensated.html  shooting_simulation_compensated.py  simulated_ttk.html  simulated_ttk.py  test  ttk_to_mhd_plot.py
examples/cof_simulation/: cof_simulation.html  cof_simulation.py
examples/discover/: discover_fire_groups.py  discover_infantry_weapons.py  discover_vehicle_weapons.json  discover_vehicle_weapons.py
examples/optimal_burst/: bursts_ttk_simulation.html  bursts_ttk_simulation.py  optimal_burst_by_range.html  optimal_burst_by_range.py
examples/shooting_simulation/: shooting_simulation.html  shooting_simulation.py
examples/ttk_simulation/: ttk_simulation.html  ttk_simulation.py
ps2_analysis/: altair_utils.py  data.py  data_file.py  enums.py  geometry_utils.py  utils.py
ps2_analysis/fire_groups/: ammo.py  cone_of_fire.py  damage_profile.py  data_files.py  data_fixers.py  fire_group.py  fire_mode.py  fire_timing.py  generate.py  heat.py  joins.py  lock_on.py  projectile.py  queries.py  recoil.py
ps2_analysis/infantry_weapons/: ammo.py  attachment.py  (+13 more)
tests/: test_geometry_utils.py  test_utils.py
(+54 files in other folders)
