[tool.poetry]
name = "ps2_analysis"
version = "0.6.0"
description = "Daybreak Game's Planetside 2 data analysis (UNOFFICIAL)"

license = "MIT"

authors = [
    "Sylvain Pascou <sylvain@pascou.net>"
]

readme = "README.md"

repository = "https://github.com/spascou/ps2-analysis"
homepage = "https://github.com/spascou/ps2-analysis"

keywords = []

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.9"
altair = "^4.1"
ndjson = "^0.3"
ps2_census = "^0.12"
python_slugify = "^4.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7"
flake8-bugbear = "^20.1"
isort = "^4.3"
jedi = "^0.17"
mypy = "^0.770"
pytest = "^5.4"
pytest-cov = "^2.8"
pytest-flake8 = "^1.0"
ipython = "^7.13"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
