[tool.poetry]
name = "ps2_analysis"
version = "0.18.1"
description = "Daybreak Game's Planetside 2 data analysis (UNOFFICIAL)"

license = "MIT"

authors = [
    "Sylvain Pascou <sylvain@pascou.net>"
]

readme = "README.md"

repository = "https://github.com/spascou/ps2-analysis"
homepage = "https://github.com/spascou/ps2-analysis"

keywords = []

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.9"
ndjson = "^0.3"
ps2-census = "^0.12"
python-slugify = "^4.0"
methodtools = "^0.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8"
flake8-bugbear = "^20.1"
isort = "^5.0"
jedi = "^0.17"
mypy = "^0.782"
pytest = "^5.4"
pytest-cov = "^2.10"
pytest-flake8 = "^1.0"
ipython = "^7.16"

[build-system]
requires = ["poetry>=1.0.9"]
build-backend = "poetry.masonry.api"
